feat:资源配额相关更改
